reading function done