@@ -1,6 +1,8 @@
 package com.todo_app.Service;
 
 import com.todo_app.Model.Task;
+import com.todo_app.Enum.CategoryType;
+import com.todo_app.Enum.State;
 import com.todo_app.Repository.TaskRepository;
 import org.springframework.stereotype.Service;
 
@@ -15,32 +17,53 @@ public class TaskService {
         this.taskRepository = taskRepository;
     }
 
-    // Guardar tarea
-    public Task save(Task task) {
-        return taskRepository.save(task);
-    }
-
-    // Buscar por ID
-    public Task findById(Long id) {
-        return taskRepository.findById(id).orElse(null);
-    }
-
-    // Listar todas
     public List<Task> findAll() {
         return taskRepository.findAll();
     }
 
-    // ELIMINAR por ID - MÉTODO NUEVO
+    public Task findById(Long id) {
+        return taskRepository.findById(id).orElse(null);
+    }
+
+    public Task save(Task task) {
+        return taskRepository.save(task);
+    }
+
     public void deleteById(Long id) {
         taskRepository.deleteById(id);
     }
 
-    // Método de búsqueda
-    public List<Task> search(String name, String category, String state) {
-        if (name != null && name.isBlank()) name = null;
-        if (category != null && category.isBlank()) category = null;
-        if (state != null && state.isBlank()) state = null;
+    // Método search CORREGIDO
+    public List<Task> search(String name, String categoryStr, String stateStr) {
+        // Si todos los parámetros están vacíos, retornar todas las tareas
+        if ((name == null || name.trim().isEmpty()) &&
+                (categoryStr == null || categoryStr.trim().isEmpty()) &&
+                (stateStr == null || stateStr.trim().isEmpty())) {
+            return findAll();
+        }
 
-        return taskRepository.findByFilters(name, category, state);
+        try {
+            // Convertir strings a enums
+            CategoryType category = null;
+            State state = null;
+
+            if (categoryStr != null && !categoryStr.trim().isEmpty()) {
+                category = CategoryType.valueOf(categoryStr.trim());
+            }
+
+            if (stateStr != null && !stateStr.trim().isEmpty()) {
+                state = State.valueOf(stateStr.trim());
+            }
+
+            return taskRepository.findByFilters(
+                    (name != null && !name.trim().isEmpty()) ? name.trim() : null,
+                    category,
+                    state
+            );
+        } catch (IllegalArgumentException e) {
+            // Si hay error en la conversión de enum, retornar lista vacía
+            System.out.println("Error en búsqueda: " + e.getMessage());
+            return List.of();
+        }
     }
 }
